feat(security): 添加管理员权限控制注解及示例- 新增 @IsAdmin 注解，支持方法级和类级权限控制
- 实现 IsAdminAspect 切面，拦截并验证管理员权限
- 添加 AdminExampleController 控制器，演示注解使用方式
- 在 RolesConstant 中定义 ADMIN 角色常量
- 更新 pom.xml 引入 spring-boot-starter-aop 依赖- 修改 MedicineAdminApplication 添加包扫描路径- 移除注册相关接口和实现代码
- 简化 AssistantServiceImpl 服务实现类依赖注入- 优化 SecurityUtils 工具类，增强角色判断逻辑
- 调整 AuthController 和 AuthService 接口，移除注册功能